--- a/selfModel.ipynb
+++ b/selfModel.ipynb
@@ -6,6 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "This model is not implemented as part of the project. \n",
+    "This was only used for comparison, and self evaluation\n",
+    "'''\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import cv2\n",
